# spotify-dl

./: .gitattributes  .gitignore  CHANGELOG.md  PRIVACY.md  PlaylistDl.slnx  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
backend/: pyproject.toml
backend/src/playlistdl_backend/: __init__.py  __main__.py  bridge.py  engine.py  frozen_transport.py  manifest.py  models.py  playlist_file.py  spotdl_bootstrap.py
backend/tests/: test_bridge.py  test_engine.py  test_engine_reliability.py  test_frozen_transport.py  test_manifest.py  test_playlist_file.py  test_resolve_search.py  test_search_sources.py
scripts/: audit-python-dependencies.ps1  build-release.ps1  prepare-smoke-backend.ps1  smoke-backend-lifecycle.ps1  smoke-frozen-backend.ps1  verify-release.ps1
src/PlaylistDl.App/: App.xaml  App.xaml.cs  LibraryWindow.xaml  LibraryWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PlaylistDl.App.csproj  RunLogWindow.xaml  RunLogWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  SourceOverrideWindow.xaml  SourceOverrideWindow.xaml.cs
src/PlaylistDl.App/Models/: AppSettings.cs  PlaylistInfo.cs  RangeObservableCollection.cs  (+2 more)
tests/PlaylistDl.App.Tests/: BackendClientTests.cs  DownloadQueueTests.cs  FolderPickerPathTests.cs  JobResultsTests.cs  JobStoreTests.cs  LibraryStoreTests.cs  PlaylistDl.App.Tests.csproj  RangeObservableCollectionTests.cs  RunLogReaderTests.cs  RunLogTests.cs  SourceCandidatesTests.cs  SpotifyInputTests.cs  TrackItemTests.cs  UpdateServiceTests.cs  UserErrorMessagesTests.cs
(+13 files in other folders)
