[project]
name = "playlistdl-backend"
version = "0.9.1"
description = "Structured spotDL backend for Playlist DL"
requires-python = ">=3.11,<3.15"
dependencies = [
  "requests>=2.32,<3",
  "spotdl==4.5.0",
  "spotipyFree==1.9.13",
  "yt-dlp[default]==2026.6.9",
]

[project.scripts]
playlistdl-backend = "playlistdl_backend.__main__:main"

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.14,<7",
  "pytest>=8.4,<10",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/playlistdl_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
